fix spacing on header objects

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,7 +3,6 @@
     height: 120px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
     position: relative;
     background-color: #fafafa;
 }
@@ -14,4 +13,10 @@
 }
 .sign-out{
     cursor: url("../img/cursor-pointer.jpg") 0 10, pointer;
+}
+.header-left{
+    padding-left: 28%;
+}
+.header-right{
+    padding-left: 28%;
 }
